[gd_scene load_steps=20 format=3 uid="uid://hmt035h6sxel"]

[ext_resource type="Texture2D" uid="uid://cc35sv25ejsrv" path="res://placeholder.png" id="1_ul57f"]
[ext_resource type="Script" path="res://player.gd" id="2_q6h3y"]
[ext_resource type="Script" path="res://assets/camera_controller.gd" id="3_i5v55"]
[ext_resource type="Resource" uid="uid://sy1amvuhsyeo" path="res://scripts/idle.tres" id="3_ll8ib"]
[ext_resource type="Resource" uid="uid://rp04ot2ba6yt" path="res://scripts/run.tres" id="4_vo3l8"]
[ext_resource type="Texture2D" uid="uid://ctp4itiqnj44y" path="res://assets/skies/comet_base.png" id="5_btfkd"]
[ext_resource type="Resource" uid="uid://cnxmsfayuy712" path="res://scripts/sprint.tres" id="5_r3ltx"]
[ext_resource type="Resource" uid="uid://d1lfycc21uw" path="res://scripts/jump.tres" id="6_c3mpu"]
[ext_resource type="PackedScene" uid="uid://bk4a64oc4mjar" path="res://guy.tscn" id="7_sc6kq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q73ef"]
albedo_color = Color(0.918308, 0.905436, 0.896871, 1)
albedo_texture = ExtResource("1_ul57f")
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_y2tno"]
radius = 0.839578
height = 4.61406

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_5mmdg"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_82c46"]
animation = &"Armature|Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3cdtk"]
animation = &"Armature|Run"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_ybe7i"]
blend_point_0/node = SubResource("AnimationNodeAnimation_82c46")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_3cdtk")
blend_point_1/pos = 1.0
min_space = 0.0
max_space = 3.0
snap = 1.0

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_tiawu"]
nodes/move_anim_speed/node = SubResource("AnimationNodeTimeScale_5mmdg")
nodes/move_anim_speed/position = Vector2(80, 80)
nodes/move_blend/node = SubResource("AnimationNodeBlendSpace1D_ybe7i")
nodes/move_blend/position = Vector2(-240, 80)
nodes/output/position = Vector2(340, 100)
node_connections = [&"move_anim_speed", 0, &"move_blend", &"output", 0, &"move_anim_speed"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_tpcud"]
panorama = ExtResource("5_btfkd")

[sub_resource type="Sky" id="Sky_4ws1p"]
sky_material = SubResource("PanoramaSkyMaterial_tpcud")

[sub_resource type="Environment" id="Environment_vah5s"]
background_mode = 2
sky = SubResource("Sky_4ws1p")
ambient_light_source = 3
ambient_light_color = Color(0.856067, 0.856067, 0.856067, 1)
ambient_light_energy = 8.0

[node name="MainScene" type="Node3D"]

[node name="FLOOR" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.369, -0.0518274, -1.79104)
material_override = SubResource("StandardMaterial3D_q73ef")
use_collision = true
size = Vector3(174.71, 0.155884, 160.123)

[node name="Brick" type="CSGBox3D" parent="FLOOR"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.43481, 4.515, 1.7006)
material_override = SubResource("StandardMaterial3D_q73ef")
use_collision = true
size = Vector3(5.02672, 9.0706, 28.9605)

[node name="Player" type="CharacterBody3D" parent="."]
script = ExtResource("2_q6h3y")
movestates = {
"idle": ExtResource("3_ll8ib"),
"jump": ExtResource("6_c3mpu"),
"run": ExtResource("4_vo3l8"),
"sprint": ExtResource("5_r3ltx")
}

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.26617, 0)
shape = SubResource("CapsuleShape3D_y2tno")

[node name="MeshRoot" type="Node3D" parent="Player"]

[node name="guy" parent="Player/MeshRoot" instance=ExtResource("7_sc6kq")]

[node name="Skeleton3D" parent="Player/MeshRoot/guy/Armature" index="0"]
bones/0/position = Vector3(0, 0.000757272, 0.00127686)
bones/0/rotation = Quaternion(0.611546, 0, 0, 0.791209)
bones/1/rotation = Quaternion(0.0882321, -0.000687894, -0.000115511, 0.9961)
bones/2/rotation = Quaternion(0.039164, -0.000392583, -1.53178e-05, 0.999233)
bones/3/scale = Vector3(1.07115, 1.07115, 1.07115)
bones/4/scale = Vector3(0.933576, 0.933576, 0.933576)
bones/8/scale = Vector3(0.933576, 0.933576, 0.933576)
bones/9/rotation = Quaternion(0.141848, -0.00141201, -0.0152855, 0.989769)
bones/27/scale = Vector3(0.933576, 0.933576, 0.933576)
bones/28/rotation = Quaternion(0.141342, 0.00130794, 0.015293, 0.989842)
bones/45/position = Vector3(0, 0.000665837, 0.00127686)
bones/50/position = Vector3(0, 0.000665837, 0.00127686)

[node name="BoneAttachment3D" parent="Player/MeshRoot/guy/Armature/Skeleton3D" index="6"]
transform = Transform3D(-0.923363, 0.0353393, 0.382306, -0.383932, -0.0894944, -0.919017, 0.00173704, -0.995363, 0.0962035, -0.00686308, -3.0505e-05, -0.000440585)

[node name="AnimationTree" type="AnimationTree" parent="Player/MeshRoot"]
root_node = NodePath("../guy")
tree_root = SubResource("AnimationNodeBlendTree_tiawu")
anim_player = NodePath("../guy/AnimationPlayer")
parameters/move_anim_speed/scale = 1.0
parameters/move_blend/blend_position = 0.0

[node name="CameraRoot" type="Node3D" parent="Player"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 4.65702, 0)
script = ExtResource("3_i5v55")

[node name="CamYaw" type="Node3D" parent="Player/CameraRoot"]

[node name="CamPitch" type="Node3D" parent="Player/CameraRoot/CamYaw"]

[node name="Camera3D" type="Camera3D" parent="Player/CameraRoot/CamYaw/CamPitch"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.405, -0.619611, 1.75552)

[node name="ICallThisEnemyTheSun" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.690769, 0.723076, 0, -0.723076, -0.690769, 0, 0, 0.114616)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_vah5s")

[connection signal="set_cam_rotation" from="Player/CameraRoot" to="Player" method="_on_camera_root_set_cam_rotation"]

[editable path="Player/MeshRoot/guy"]
