[gd_scene load_steps=6 format=3 uid="uid://j0585521habw"]

[ext_resource type="Script" path="res://scripts/actors/player.gd" id="1_83kd4"]
[ext_resource type="PackedScene" uid="uid://drgx362yg0d2f" path="res://scenes/actors/basic_actor.tscn" id="1_usr57"]
[ext_resource type="PackedScene" uid="uid://bladxbm1iobyy" path="res://assets/actors/guy/guy.blend" id="2_ltr6a"]
[ext_resource type="AnimationNodeBlendTree" uid="uid://ce6bvshi5lig2" path="res://scenes/actors/player_anim_tree.tres" id="3_3mx8c"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_52xqs"]
height = 2.2

[node name="Player" instance=ExtResource("1_usr57")]
script = ExtResource("1_83kd4")

[node name="MeshRoot" parent="." index="0" instance=ExtResource("2_ltr6a")]
unique_name_in_owner = true
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="Skeleton3D" parent="MeshRoot/Armature" index="0"]
bones/0/position = Vector3(0, 0.127686, -0.0757272)
bones/1/rotation = Quaternion(0.0881443, 1.18745e-07, 1.05076e-08, 0.996108)
bones/2/rotation = Quaternion(0.0391161, -1.19118e-07, 4.66301e-09, 0.999235)
bones/3/rotation = Quaternion(2.11345e-22, 1.19209e-07, -5.7903e-24, 1)
bones/4/rotation = Quaternion(0.161997, 1.13971e-14, 3.8623e-08, 0.986791)
bones/4/scale = Vector3(1, 1, 1)
bones/5/rotation = Quaternion(-0.115915, -1.18406e-07, -1.38181e-08, 0.993259)
bones/6/rotation = Quaternion(0.0861249, -0.0485453, -0.819987, 0.563779)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(-0.091525, -0.0635692, -0.387472, 0.915122)
bones/7/scale = Vector3(1, 1, 1)
bones/8/rotation = Quaternion(0.141589, -0.00135363, -0.0152784, 0.989807)
bones/9/rotation = Quaternion(-0.0645376, 0.0114437, 0.0673979, 0.995571)
bones/9/scale = Vector3(1, 1, 1)
bones/10/position = Vector3(-0.0106522, 0.31089, 0.0283733)
bones/10/rotation = Quaternion(-0.0607039, 4.36357e-05, -0.0172216, 0.998007)
bones/11/rotation = Quaternion(0.0122363, 0.000531032, -0.000876057, 0.999925)
bones/12/rotation = Quaternion(0.284134, -0.353121, 0.0926579, 0.886559)
bones/13/rotation = Quaternion(-0.0859877, -0.0389887, -0.0780044, 0.992472)
bones/14/position = Vector3(-0.03351, 0.298372, 0.0820094)
bones/14/rotation = Quaternion(0.034404, -0.266466, -0.0232203, 0.96295)
bones/15/rotation = Quaternion(-0.00718596, 0.00820391, 0.0399021, 0.999144)
bones/16/position = Vector3(0.0163337, 0.296318, -0.0368671)
bones/16/rotation = Quaternion(0.0548042, 0.924158, -0.058789, -0.373461)
bones/17/rotation = Quaternion(-0.00657246, -0.000334955, 0.00428675, 0.999969)
bones/18/position = Vector3(0.0370919, 0.271756, -0.0896967)
bones/18/rotation = Quaternion(0.153169, 0.89869, -0.161234, -0.378019)
bones/19/rotation = Quaternion(0.016305, 0.00288395, -0.0186361, 0.999689)
bones/20/rotation = Quaternion(0.0861247, 0.0485451, 0.819987, 0.563779)
bones/21/rotation = Quaternion(-0.0915251, 0.0635692, 0.387472, 0.915122)
bones/21/scale = Vector3(1, 1, 1)
bones/22/rotation = Quaternion(0.141589, 0.00135365, 0.0152784, 0.989807)
bones/22/scale = Vector3(1, 1, 1)
bones/23/rotation = Quaternion(-0.0645376, -0.0114437, -0.0673979, 0.995571)
bones/24/position = Vector3(0.0106521, 0.31089, 0.0283733)
bones/24/rotation = Quaternion(-0.0607039, -4.3634e-05, 0.0172216, 0.998007)
bones/25/rotation = Quaternion(0.0122363, -0.000531032, 0.000876072, 0.999925)
bones/26/position = Vector3(0.0239694, 0.155492, 0.119889)
bones/26/rotation = Quaternion(0.284134, 0.353121, -0.0926579, 0.886559)
bones/27/rotation = Quaternion(-0.0859877, 0.0389886, 0.0780044, 0.992472)
bones/28/position = Vector3(0.03351, 0.298372, 0.0820094)
bones/28/rotation = Quaternion(0.0344041, 0.266466, 0.0232203, 0.96295)
bones/29/rotation = Quaternion(-0.00718598, -0.008204, -0.0399021, 0.999144)
bones/30/position = Vector3(-0.0163339, 0.296318, -0.0368671)
bones/30/rotation = Quaternion(-0.0548042, 0.924158, -0.0587889, 0.373461)
bones/31/rotation = Quaternion(-0.00657246, 0.000334985, -0.00428671, 0.999969)
bones/32/position = Vector3(-0.037092, 0.271756, -0.0896968)
bones/32/rotation = Quaternion(-0.153169, 0.89869, -0.161233, 0.378019)
bones/33/rotation = Quaternion(0.0163051, -0.00288394, 0.0186361, 0.999689)
bones/36/position = Vector3(1.1645e-10, 0.127686, -0.0665837)
bones/36/rotation = Quaternion(0.615493, 0.348092, 0.666155, -0.237145)
bones/37/rotation = Quaternion(-0.412053, -0.0219236, 0.108667, 0.904391)
bones/38/rotation = Quaternion(-0.0218794, 0.00270206, 0.0337067, 0.999189)
bones/39/rotation = Quaternion(0.00803014, 0.00844163, -0.722212, 0.691574)
bones/40/position = Vector3(-1.1645e-10, 0.127686, -0.0665837)
bones/40/rotation = Quaternion(-0.615493, 0.348092, 0.666155, 0.237145)
bones/41/rotation = Quaternion(-0.412053, 0.0219237, -0.108667, 0.904391)
bones/42/rotation = Quaternion(-0.0218794, -0.00270206, -0.0337067, 0.999189)
bones/43/rotation = Quaternion(0.00803014, -0.00844163, 0.722212, 0.691574)

[node name="ArmIK" type="SkeletonIK3D" parent="MeshRoot/Armature/Skeleton3D" index="6"]
root_bone = &"Shoulder.r"
tip_bone = &"Hand.r"

[node name="SpineIK" type="SkeletonIK3D" parent="MeshRoot/Armature/Skeleton3D" index="7"]
root_bone = &"Spine0"
tip_bone = &"Spine3"

[node name="AnimationTree" type="AnimationTree" parent="MeshRoot" index="2"]
tree_root = ExtResource("3_3mx8c")
anim_player = NodePath("../AnimationPlayer")
parameters/aim_blend/blend_amount = 0
parameters/jump/active = false
parameters/jump/internal_active = false
parameters/jump/request = 0
parameters/move_anim_speed/scale = 1.0
parameters/move_blend/blend_position = Vector2(0, 1)

[node name="AnimController" parent="." index="2" node_paths=PackedStringArray("anim_tree")]
anim_tree = NodePath("../MeshRoot/AnimationTree")

[node name="RemoteTransform" parent="." index="4"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.2, 0)

[node name="FmodListener3D" type="FmodListener3D" parent="." index="6"]

[node name="FmodBankLoader" type="FmodBankLoader" parent="." index="7"]
bank_paths = ["res://assets/audio/Build/Desktop/player_body.bank", "res://assets/audio/Build/Desktop/weapon.bank"]

[node name="IKTarget" type="Marker3D" parent="." index="8"]
unique_name_in_owner = true
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 2.5, 0)

[node name="ArmIKTarget" type="Marker3D" parent="IKTarget" index="0"]
unique_name_in_owner = true
transform = Transform3D(-1, -8.74228e-08, -3.82137e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 0, 0, 10)

[node name="NavigationAgent3D" parent="." index="11"]
avoidance_enabled = false

[node name="Collider" parent="." index="12"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.15, 0)
shape = SubResource("CapsuleShape3D_52xqs")

[editable path="MeshRoot"]
